--- a/frontend/criterios.html
+++ b/frontend/criterios.html
@@ -190,11 +190,16 @@
       btnLoading.classList.remove('d-none');
 
       try {
-        const res = await fetch('http://localhost:3000/api/articles/analisar', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(payload)
-        });
+        const API_BASE_URL = window.location.hostname === 'localhost'
+  ? 'http://localhost:3000'
+  : 'https://nome-do-seu-app.onrender.com';
+
+const res = await fetch(`${API_BASE_URL}/api/articles/analisar`, {
+  method: 'POST',
+  headers: { 'Content-Type': 'application/json' },
+  body: JSON.stringify(payload)
+});
+
 
         if (!res.ok) throw new Error('Erro na análise dos artigos');
 
